add img ao footer

--- a/Blog/css/style.css
+++ b/Blog/css/style.css
@@ -83,7 +83,6 @@ body {
     display: flex;
     width: 100%;
     align-items: center;
-    border: 1px solid green;
     justify-content: space-around;
 }
 .box-area-box {
@@ -229,10 +228,13 @@ body {
 .logo-footer h1{
     padding: 20px;
 }
+.logo-footer img{
+    width: 300px;
+    padding: 0px 20px;
+}
 .menu-footer {
     grid-area: menu-normal;
     padding: 30px 100px;
-
 }
 
 .menu-footer .menu-list ul {
