--- a/Blog/css/style.css
+++ b/Blog/css/style.css
@@ -59,7 +59,7 @@ body {
     background-size: 100%;
 }
 .slide-area-description,
-.slide-area-img {
+.slide-area-tittle{
     width: 45%;
     padding: 30px 100px;
 }
@@ -83,7 +83,7 @@ body {
     display: flex;
     width: 100%;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-around
 }
 .box-area-box {
     width:15%;
