--- a/Blog/css/responsive.css
+++ b/Blog/css/responsive.css
@@ -1,12 +1,24 @@
-@media (max-width : 800px) {
+@media (max-width : 600px) {
     body div {
         border: 1px solid red;
     }
-
     header .menu .menu-list ul {
         display: none;
     }
-
+    .header .logo{
+        width:80%;
+        text-align: left;
+    }
+    .header .menu-responsive-icon {
+        width: 20%;
+        text-align: right;
+        font-size: 2rem;
+    }
+    .header .logo,
+    .header .menu-responsive-icon {
+        padding: 30px 30px;
+    }
+    
     /*CONTEINER GRID DO BODY*/
     .conteiner-content {
         grid-template-columns: 100%;
@@ -16,7 +28,12 @@
             'secao '
             'dados ';
     }
-
+    .menu-responsive-icon{
+        display: block;
+    }
+    .menu{
+        display: none;
+    }
     .box-area {
         display: block;
         width: 100%;
