--- a/Blog/css/responsive.css
+++ b/Blog/css/responsive.css
@@ -2,23 +2,51 @@
     body div {
         border: 1px solid red;
     }
+
     header .menu .menu-list ul {
         display: none;
     }
-    .header .logo{
-        width:80%;
+
+    .header .logo {
+        width: 80%;
         text-align: left;
     }
+
     .header .menu-responsive-icon {
         width: 20%;
         text-align: right;
         font-size: 2rem;
     }
+
     .header .logo,
     .header .menu-responsive-icon {
         padding: 30px 30px;
     }
-    
+    /*area do slide*/
+    .slide-area {
+        display: block;
+        width: 100%;
+        padding: 30px 0px;
+    }
+
+    .slide-area-description,
+    .slide-area-tittle {
+        width: 100%;
+        padding: 0px;
+        margin: auto;
+        height: 100%;
+    }
+    /*titulo do slide*/
+    .slide-area-description-title{
+        width: 70%;
+        margin: auto;
+    }
+    .slide-area-description-desc{
+        margin: auto;
+    }
+    .slide-area-description-title h2{
+        font-size: 2.5rem;
+    }
     /*CONTEINER GRID DO BODY*/
     .conteiner-content {
         grid-template-columns: 100%;
@@ -28,12 +56,15 @@
             'secao '
             'dados ';
     }
-    .menu-responsive-icon{
+
+    .menu-responsive-icon {
         display: block;
     }
-    .menu{
+
+    .menu {
         display: none;
     }
+
     .box-area {
         display: block;
         width: 100%;
@@ -44,9 +75,7 @@
         margin: 20px auto;
     }
 
-    .slide-area-description-desc {
-        width: 100%;
-    }
+    
 
     .section-area-content {
         grid-template-columns: 1fr;
@@ -56,8 +85,9 @@
             'img-pequena';
         width: 100%;
     }
+
     .section-area-img {
-        width:10%;
+        width: 10%;
         padding: 0px;
     }
 
@@ -76,7 +106,7 @@
     }
 
     .section-area-txt {
-        width:60%;
+        width: 60%;
         padding: 0px;
     }
 
@@ -90,7 +120,7 @@
 
     .slide-area-description,
     .slide-area-tittle {
-        width:100%;
-        
+        width: 100%;
+
     }
 }
