--- a/Blog/css/style.css
+++ b/Blog/css/style.css
@@ -65,6 +65,7 @@ body {
 }
 .slide-area-description-title{
     margin: 0px 0px 20px;
+    padding: 20px;
 }
 .slide-area-description-title h2{
     font-size: 3rem;
