caminho img lide mobile

--- a/Blog/css/responsive.css
+++ b/Blog/css/responsive.css
@@ -27,7 +27,7 @@
         display: block;
         width: 100%;
         padding: 30px 0px;
-        background-image: url(/Blog/img/pexels-markus-spiske-1089438.jpg);
+        background-image: url(./Blog/img/pexels-markus-spiske-1089438.jpg);
         background-repeat: none;
         background-attachment: fixed;
         background-size: 100%;
